# eternal-utils

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  configure.ac
src/: Makefile.am  aliases.c  aliases.h  envs.c  envs.h  eternal-alias.c  eternal-export.c  eternal-source.c  eternal-unalias.c  eternal-unset.c  eternal-unsource.c  glib-extras.c  glib-extras.h  shared.c  shared.h  sources.c  sources.h
ubuntu/: Makefile
ubuntu/debian/: changelog  control  copyright
