AM_CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS =
bin_PROGRAMS = $(top_builddir)/bin/eternal-alias \
	$(top_builddir)/bin/eternal-export \
	$(top_builddir)/bin/eternal-unalias \
	$(top_builddir)/bin/eternal-unset
__top_builddir__bin_eternal_alias_SOURCES = eternal-alias.c
__top_builddir__bin_eternal_export_SOURCES = eternal-export.c
__top_builddir__bin_eternal_unalias_SOURCES = eternal-unalias.c
__top_builddir__bin_eternal_unset_SOURCES = eternal-unset.c
